--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
+asn1crypto==0.24.0
+bcrypt==3.1.4
+cffi==1.11.5
 click==6.7
+cryptography==2.3.1
 Flask==1.0.2
-Flask-PyMongo==2.1.0
+Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.6
+Flask-Script==2.0.6
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
+jwt==0.5.4
 MarkupSafe==1.0
 mongoengine==0.15.3
-pkg-resources==0.0.0
+pycparser==2.18
 pymongo==3.7.1
 six==1.11.0
 Werkzeug==0.14.1
