--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,23 @@
-asn1crypto==0.24.0
-bcrypt==3.1.4
-cffi==1.11.5
-click==6.7
-cryptography==2.3.1
-Flask==1.0.2
+alembic==0.8.9
+bcrypt==3.1.2
+cffi==1.9.1
+click==6.6
+coverage==4.2
+Flask==0.12
 Flask-Bcrypt==0.7.1
-Flask-Cors==3.0.6
-Flask-Script==2.0.6
-idna==2.7
+Flask-Cors==3.0.3
+Flask-Migrate==2.0.2
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.1
+Flask-Testing==0.6.1
 itsdangerous==0.24
-Jinja2==2.10
-jwt==0.5.4
-MarkupSafe==1.0
-mongoengine==0.15.3
-pycparser==2.18
-pymongo==3.7.1
-six==1.11.0
-Werkzeug==0.14.1
+Jinja2==2.8
+Mako==1.0.6
+MarkupSafe==0.23
+psycopg2==2.6.2
+pycparser==2.17
+PyJWT==1.4.2
+python-editor==1.0.3
+six==1.10.0
+SQLAlchemy==1.1.4
+Werkzeug==0.11.13
